--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'  // For CLI app
 }
 
 group = 'org.currierg'
@@ -12,6 +13,23 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+}
+
+application {
+    mainClass = 'org.currierg.Main'  // CLI entry point
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)  // Java 17 explicit
+    }
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'org.currierg.Main'
+    }
+    archiveFileName = 'StructAnalyzer.jar'
 }
 
 test {
