--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,7 @@
+# source.dirs: Comma-separated list of top-level directories to scan recursively for .c and .h files
 source.dirs=G:/GithubProjects/RepInfOrg/krio/rcm
-output.file=G:/GithubProjects/RepInfOrg/structs_table.txt
-error.file=G:/GithubProjects/RepInfOrg/struct_errors.txt
+output.dir=G:/GithubProjects/RepInfOrg
+output.file=structs_table.txt
+error.file=struct_errors.txt
+generated.dir=generated
 max.files=500
