--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
-# source.dirs: Comma-separated list of top-level directories to scan recursively for .c and .h files
 source.dirs=G:/GithubProjects/RepInfOrg/krio/rcm
 output.dir=G:/GithubProjects/RepInfOrg
 output.file=structs_table.txt
+output.json=structsTable.json
 error.file=struct_errors.txt
 generated.dir=generated
 max.files=500
