Update .gitignore and Writerside documentation files
Added PROMPT.md to the ignore list for WriterSide topics. Updated Writerside documentation files with the latest commit hash, class references, and configurations to reflect recent changes in code structure and utility enhancements. Simplified changelog formatting for clearer commit tracking and readability.

Signed-off-by: gcurrier <glen.a.currier@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+### Mine ###
+/Writerside/topics/PROMPT.md
 /TestDir/properties/config.properties
 /TestDir/properties/logging.properties
 /TestDir/StructAnalyzer.jar
